--- a/AirportDataBase.vcxproj
+++ b/AirportDataBase.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="AirportDataBase.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="Users.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Users.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
