--- a/AirportDataBase.vcxproj.filters
+++ b/AirportDataBase.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="AirportDataBase.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="User.cpp">
+    <ClCompile Include="Users.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Users.cpp">
+    <ClCompile Include="Flight.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,5 +29,11 @@
     <ClInclude Include="Users.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Flight.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Users.txt" />
   </ItemGroup>
 </Project>
